--- a/packages/fluent/scss/splitter/_variables.scss
+++ b/packages/fluent/scss/splitter/_variables.scss
@@ -7,7 +7,7 @@ $kendo-splitter-border-width: map.get( $kendo-spacing, hair ) !default;
 /// Font size of the splitter.
 /// @group splitter
 $kendo-splitter-font-size: var( --kendo-font-size, initial ) !default;
-/// Line hegiht of the splitter.
+/// Line height of the splitter.
 /// @group splitter
 $kendo-splitter-line-height: var( --kendo-line-height, initial ) !default;
 /// Font family of the splitter.
