--- a/packages/fluent/scss/checkbox/_layout.scss
+++ b/packages/fluent/scss/checkbox/_layout.scss
@@ -8,8 +8,8 @@
     .k-checkbox {
         margin: 0;
         padding: 0;
-        width: var( --INTERNAL--kendo-checkbox-width, #{ $kendo-checkbox-width });
-        height: var( --INTERNAL--kendo-checkbox-height, #{ $kendo-checkbox-height });
+        width: var( --INTERNAL--kendo-checkbox-width, 1em );
+        height: var( --INTERNAL--kendo-checkbox-height, 1em );
         line-height: initial;
         border-width: var( --kendo-checkbox-border-width, #{$kendo-checkbox-border-width} );
         border-style: solid;
@@ -23,17 +23,35 @@
         position: relative;
         cursor: pointer;
         -webkit-appearance: none;
+
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-size: var( --INTERNAL--kendo-checkbox-indicator-size, 100% );
+        }
     }
 
 
     // Checkbox indicator
     .k-checkbox::before {
+        @if $kendo-checkbox-indicator-type == "pseudo" {
+            content: "";
+            width: var( --INTERNAL--kendo-checkbox-indicator-size, 1em );
+            height: var( --INTERNAL--kendo-checkbox-indicator-size, 1em );
+            border-width: 0;
+            border-radius: var( --kendo-checkbox-indicator-border-radius );
+            background-color: currentColor;
+            overflow: hidden;
+            transform: scale(0) translate(-50%, -50%);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
+
         @if $kendo-checkbox-indicator-type == "glyph" {
             content: $kendo-checkbox-checked-glyph;
             width: 1em;
             height: 1em;
-            font-size: var( --INTERNAL-kendo-glyph-size, ( map.get( $kendo-spacing, 4 ) - map.get( $kendo-spacing, thin ) ) );
             font-family: var( --kendo-checkbox-glyph-font-family, #{ $kendo-checkbox-glyph-font-family } );
+            font-size: var( --INTERNAL--kendo-checkbox-glyph-size, 1em );
             line-height: 1;
             transform: translate(-50%, -50%) scale(0);
             overflow: hidden;
@@ -44,11 +62,17 @@
     }
 
 
-    // Checked state
-    .k-checkbox:checked,
-    .k-checkbox.k-checked {
+    // Hover state
+    .k-checkbox:hover,
+    .k-checkbox.k-hover {
         @if $kendo-checkbox-indicator-type == "image" {
-            background-image: var( --kendo-checkbox-checked-image, #{ $kendo-checkbox-checked-image } );
+            background-image: var( --kendo-checkbox-hover-image, #{ $kendo-checkbox-hover-image } );
+        }
+
+        @if $kendo-checkbox-indicator-type == "pseudo" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
         }
 
         @if $kendo-checkbox-indicator-type == "glyph" {
@@ -58,37 +82,79 @@
         }
     }
 
+
+    // Focus state
     .k-checkbox:focus,
     .k-checkbox.k-focus {
-        &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            margin: -4px;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            border: 1px solid #ccc;
+        outline-offset: $kendo-checkbox-focus-outline-offset;
+    }
+
+
+    // Checked state
+    .k-checkbox:checked,
+    .k-checkbox.k-checked {
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-image: var( --kendo-checkbox-checked-image, #{ $kendo-checkbox-checked-image } );
+        }
+
+        @if $kendo-checkbox-indicator-type == "pseudo" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        @if $kendo-checkbox-indicator-type == "glyph" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
         }
     }
+
 
     // Indeterminate state
     .k-checkbox:indeterminate,
     .k-checkbox.k-indeterminate {
-        &::after {
-            content: "";
-            width: var( --INTERNAL--kendo-checkbox-indeterminate-width, #{ $kendo-checkbox-indeterminate-width });
-            height: var( --INTERNAL--kendo-checkbox-indeterminate-height, #{ $kendo-checkbox-indeterminate-height });
-            border-width: var( --INTERNAL--kendo-checkbox-indeterminate-border-width, 5px);
-            border-style: solid;
-            border-radius: 2px;
-            box-sizing: border-box;
-            position: absolute;
-            top: var( --INTERNAL--kendo-checkbox-indeterminate-top, #{ $kendo-checkbox-indeterminate-top });
-            left: var( --INTERNAL--kendo-checkbox-indeterminate-left, #{ $kendo-checkbox-indeterminate-left });
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-image: var( --kendo-checkbox-indeterminate-image, #{ $kendo-checkbox-indeterminate-image } );
+            background-size: var( --INTERNAL--kendo-checkbox-indeterminate-size, 100% );
+        }
+
+        @if $kendo-checkbox-indicator-type == "pseudo" {
+            &::before {
+                width: var( --INTERNAL--kendo-checkbox-indeterminate-size, 1em );
+                height: var( --INTERNAL--kendo-checkbox-indeterminate-size, 1em );
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        @if $kendo-checkbox-indicator-type == "glyph" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
         }
     }
+    .k-checkbox:indeterminate:hover,
+    .k-checkbox.k-indeterminate.k-hover {
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-image: var( --kendo-checkbox-hover-indeterminate-image, #{ $kendo-checkbox-hover-indeterminate-image } );
+        }
+    }
+
+
+    // Disabled state
+    .k-checkbox:checked:disabled,
+    .k-checkbox.k-checked.k-disabled {
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-image: var( --kendo-checkbox-disabled-checked-image, #{ $kendo-checkbox-disabled-checked-image } );
+        }
+    }
+    .k-checkbox:indeterminate:disabled,
+    .k-checkbox.k-indeterminate.k-disabled {
+        @if $kendo-checkbox-indicator-type == "image" {
+            background-image: var( --kendo-checkbox-disabled-indeterminate-image, #{ $kendo-checkbox-disabled-indeterminate-image } );
+        }
+    }
+
 
     // Checkbox wrap
     .k-checkbox-wrap {
@@ -181,8 +247,8 @@
     .k-ripple-container {
         .k-checkbox::after {
             content: "";
-            width: var( --INTERNAL-kendo-ripple-size-width, ( map.get( $kendo-spacing, 5 ) * 3 ));
-            height: var( --INTERNAL-kendo-ripple-size-height, ( map.get( $kendo-spacing, 5 ) * 3 ));
+            width: var( --INTERNAL--kendo-ripple-size-width, 300% );
+            height: var( --INTERNAL--kendo-ripple-size-height, 300% );
             display: block;
             position: absolute;
             left: 50%;
@@ -196,8 +262,8 @@
 
         .k-checkbox:focus,
         .k-checkbox.k-focus {
-            outline-style: solid;
-            outline-offset: 5rem;
+            box-shadow: none !important; // sass-lint:disable-line no-important
+            outline: none !important; // sass-lint:disable-line no-important
         }
 
         .k-checkbox:disabled::after,
@@ -211,38 +277,24 @@
     @each $size, $size-props in $kendo-checkbox-sizes {
         $_size: map.get( $size-props, size );
         $_glyph-size: map.get( $size-props, glyph-size );
+        $_indicator-size: map.get( $size-props, indicator-size );
+        $_indeterminate-size: map.get( $size-props, indeterminate-size );
         $_ripple-size: map.get( $size-props, ripple-size );
 
         .k-checkbox-#{$size} {
-            --INTERNAL--kendo-checkbox-width: #{ $_size };
-            --INTERNAL--kendo-checkbox-height: #{ $_size };
-
-            &::before {
-                --INTERNAL-kendo-glyph-size: #{ $_glyph-size };
-            }
+            --INTERNAL--kendo-checkbox-width: #{$_size};
+            --INTERNAL--kendo-checkbox-height: #{$_size};
+            --INTERNAL--kendo-checkbox-glyph-size: #{$_glyph-size};
+            --INTERNAL--kendo-checkbox-indicator-size: #{$_indicator-size};
+            --INTERNAL--kendo-checkbox-indeterminate-size: #{$_indeterminate-size};
         }
+
         .k-ripple-container {
             .k-checkbox-#{size}::after {
-                --INTERNAL-kendo-ripple-size-width: #{ $_ripple-size };
-                --INTERNAL-kendo-ripple-size-height: #{ $_ripple-size };
+                --INTERNAL--kendo-ripple-size-width: #{ $_ripple-size };
+                --INTERNAL--kendo-ripple-size-height: #{ $_ripple-size };
             }
         }
     }
 
-    @each $size, $size-props in $kendo-checkbox-indeterminate-sizes {
-        $_size: map.get( $size-props, size );
-        $_position: map.get( $size-props, position );
-        $_border-width: map.get( $size-props, border-width);
-
-        .k-checkbox-#{$size}:indeterminate,
-        .k-checkbox-#{$size}.k-indeterminate {
-                &::after {
-                    --INTERNAL--kendo-checkbox-indeterminate-width: #{ $size };
-                    --INTERNAL--kendo-checkbox-indeterminate-height: #{ $size };
-                    --INTERNAL--kendo-checkbox-indeterminate-top: #{  $_position };
-                    --INTERNAL--kendo-checkbox-indeterminate-left: #{  $_position };
-                    --INTERNAL--kendo-checkbox-indeterminate-border-width: #{ $_border-width };
-                }
-        }
-    }
 }
