--- a/packages/fluent/scss/radio/_layout.scss
+++ b/packages/fluent/scss/radio/_layout.scss
@@ -7,12 +7,12 @@
 
     .k-radio {
         @include border-radius( $kendo-radio-border-radius );
-        width: var( --INTERNAL-kendo-radio-width, #{ $kendo-radio-width } );
-        height: var( --INTERNAL-kendo-radio-height, #{ $kendo-radio-height } );
+        width: var( --INTERNAL--kendo-radio-width, 1em );
+        height: var( --INTERNAL--kendo-radio-height, 1em );
         margin: 0;
         padding: 0;
         line-height: initial;
-        border-width: var( --kendo-radio-border-width, #{ $kendo-radio-border-width });
+        border-width: var( --kendo-radio-border-width, #{$kendo-radio-border-width} );
         border-style: solid;
         outline: 0;
         box-sizing: border-box;
@@ -26,19 +26,34 @@
         cursor: pointer;
         -webkit-appearance: none;
 
-        &::before {
-            font-size: var( --INTERNAL-kendo-radio-font-size, #{ $kendo-radio-font-size } )
+        @if $kendo-radio-indicator-type == "image" {
+            background-size: var( --INTERNAL--kendo-checkbox-indicator-size, 100% );
         }
     }
 
 
     // Radio indicator
     .k-radio::before {
+        @if $kendo-radio-indicator-type == "pseudo" {
+            content: "";
+            width: var( --INTERNAL--kendo-radio-indicator-size, 1em );
+            height: var( --INTERNAL--kendo-radio-indicator-size, 1em );
+            border-width: 0;
+            border-radius: var( --kendo-radio-indicator-border-radius, #{$kendo-radio-indicator-border-radius} );
+            background-color: currentColor;
+            overflow: hidden;
+            transform: scale(0) translate(-50%, -50%);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
+
         @if $kendo-radio-indicator-type == "glyph" {
-            content: var( --kendo-radio-checked-glyph, #{ $kendo-radio-checked-glyph } );
+            content: var( --kendo-radio-checked-glyph, #{$kendo-radio-checked-glyph} );
             width: 1em;
             height: 1em;
-            font-family: var( --kendo-radio-glyph-font-family, #{ $kendo-radio-glyph-font-family } );
+            font-family: var( --kendo-radio-glyph-font-family, #{$kendo-radio-glyph-font-family} );
+            font-size: var( --INTERNAL--kendo-radio-glyph-size, 1em );
             line-height: 1;
             transform: scale(0) translate(-50%, -50%);
             overflow: hidden;
@@ -48,56 +63,46 @@
         }
     }
 
+
+    // Hover state
+    .k-radio:hover,
+    .k-radio.k-hover {
+        @if $kendo-radio-indicator-type == "image" {
+            background-image: var( --kendo-radio-hover-image, #{ $kendo-radio-hover-image } );
+        }
+
+        @if $kendo-radio-indicator-type == "pseudo" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        @if $kendo-radio-indicator-type == "glyph" {
+            &::before {
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+    }
+
+
     // Focus state
     .k-radio:focus,
     .k-radio.k-focus {
-        &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            margin: -4px;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            border: 1px solid;
-        }
+        outline-offset: $kendo-radio-focus-outline-offset;
     }
 
 
-    .k-radio:hover,
-    .k-radio.k-hover {
-        &:not(
-            .k-radio.k-disabled, .k-radio:disabled,
-            .k-radio.k-invalid, .k-radio:invalid
-        )::after {
-            content: "";
-            width: var( --INTERNAL-kendo-radio-checked-width, #{ $kendo-radio-checked-width } );
-            height: var( --INTERNAL-kendo-radio-checked-height, #{ $kendo-radio-checked-height } );
-            border-width: var( --INTERNAL-kendo-radio-checked-border-width, #{ $kendo-radio-checked-border-width } );
-            border-style: solid;
-            border-radius: var( --kendo-radio-border-radius, #{ $kendo-radio-border-radius } );
-            box-sizing: border-box;
-            position: absolute;
-            top: var( --INTERNAL-kendo-radio-checked-top, #{ $kendo-radio-checked-top } );
-            left: var( --INTERNAL-kendo-radio-checked-left, #{ $kendo-radio-checked-left } );
-        }
-    }
-
-    // Checked and Hover state
+    // Checked state
     .k-radio:checked,
     .k-radio.k-checked {
-        &::after {
-            content: "";
-            width: var( --INTERNAL-kendo-radio-checked-width, #{ $kendo-radio-checked-width } );
-            height: var( --INTERNAL-kendo-radio-checked-height, #{ $kendo-radio-checked-height } );
-            border-width: var( --INTERNAL-kendo-radio-checked-border-width, #{ $kendo-radio-checked-border-width } );
-            border-style: solid;
-            border-radius: var( --kendo-radio-border-radius, #{ $kendo-radio-border-radius } );
-            box-sizing: border-box;
-            position: absolute;
-            top: var( --INTERNAL-kendo-radio-checked-top, #{ $kendo-radio-checked-top } );
-            left: var( --INTERNAL-kendo-radio-checked-left, #{ $kendo-radio-checked-left } );
+        @if $kendo-radio-indicator-type == "image" {
+            background-image: var( --kendo-radio-checked-image, #{ $kendo-radio-checked-image } );
+        }
+
+        @if $kendo-radio-indicator-type == "pseudo" {
+            &::before {
+                transform: scale(1) translate(-50%, -50%);
+            }
         }
 
         @if $kendo-radio-indicator-type == "glyph" {
@@ -108,6 +113,7 @@
     }
 
 
+    // Disabled state
     .k-radio:disabled:checked,
     .k-radio.k-disabled.k-checked {
         @if $kendo-radio-indicator-type == "image" {
@@ -211,8 +217,8 @@
     .k-ripple-container {
         .k-radio::after {
             content: "";
-            width: var( --INTERNAL-kendo-radio-ripple-width, #{ $kendo-radio-ripple-width } );
-            height: var( --INTERNAL-kendo-radio-ripple-height, #{ $kendo-radio-ripple-height } );
+            width: var( --INTERNAL--kendo-radio-ripple-width, 300% );
+            height: var( --INTERNAL--kendo-radio-ripple-height, 300% );
             display: block;
             position: absolute;
             left: 50%;
@@ -224,9 +230,10 @@
             transform-origin: center center;
         }
 
-        .k-radio:disabled::after,
-        .k-radio.k-disabled::after {
-            display: none;
+        .k-radio:focus,
+        .k-radio.k-focus {
+            box-shadow: none !important; // sass-lint:disable-line no-important
+            outline: none !important; // sass-lint:disable-line no-important
         }
 
         .k-radio:disabled::after,
@@ -240,36 +247,20 @@
     @each $size, $size-props in $kendo-radio-sizes {
         $_size: map.get( $size-props, size );
         $_glyph-size: map.get( $size-props, glyph-size );
+        $_indicator-size: map.get( $size-props, indicator-size );
         $_ripple-size: map.get( $size-props, ripple-size );
-        $_checked-border-width: map.get( $size-props, checked-border-width);
-        $_checked-position: map.get( $size-props, checked-position);
 
         .k-radio-#{$size} {
-            --INTERNAL-kendo-radio-width: #{ $_size };
-            --INTERNAL-kendo-radio-height: #{ $_size };
-
-            &::before {
-                --INTERNAL-kendo-radio-font-size: #{ $_glyph-size };
-            }
-        }
-
-        .k-radio-#{$size}.k-checked,
-        .k-radio-#{$size}:checked,
-        .k-radio-#{$size}.k-hover,
-        .k-radio-#{$size}:hover {
-            &::after {
-                --INTERNAL-kendo-radio-checked-width: #{math.div( $_size, 2 )};
-                --INTERNAL-kendo-radio-checked-height: #{math.div( $_size, 2 )};
-                --INTERNAL-kendo-radio-checked-border-width: #{ $_checked-border-width };
-                --INTERNAL-kendo-radio-checked-top: #{ $_checked-position };
-                --INTERNAL-kendo-radio-checked-left: #{ $_checked-position };
-            }
+            --INTERNAL--kendo-radio-width: #{$_size};
+            --INTERNAL--kendo-radio-height: #{$_size};
+            --INTERNAL--kendo-radio-glyph-size: #{$_glyph-size};
+            --INTERNAL--kendo-radio-indicator-size: #{$_indicator-size};
         }
 
         .k-ripple-container {
             .k-radio-#{$size}::after {
-                --INTERNAL-kendo-radio-ripple-width: #{ $_ripple-size };
-                --INTERNAL-kendo-radio-ripple-height: #{ $_ripple-size };
+                --INTERNAL--kendo-radio-ripple-width: #{ $_ripple-size };
+                --INTERNAL--kendo-radio-ripple-height: #{ $_ripple-size };
             }
         }
     }
